# labels

./: .editorconfig  .gitignore  README.md  pyproject.toml
labels/: main.py
