[tool.poetry]
name = "labels"
version = "0.1.0"
description = "Create PDF sheet of labels"
authors = ["Russell Dillin <rastreus@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "labels"}]

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^4.0.4"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.3.23"
black = "^23.3.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.2.2"
toml = "^0.10.2"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
    \.git
  | __pycache__
  | \.venv
  | build
  | dist
)'''

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "labels"
skip_gitignore = true

[tool.flake8]
max-line-length = 88
ignore = "E203, E501, W503"
exclude = ".git,__pycache__,build,dist,.venv"

[tool.mypy]
files = "labels"
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
